chore: Convert template repo into plugin repo
- Move sources to `src` directory
- Add support for SCSS
- Add formatter with prettier
- Use esbuild plugin to generate the Obsidian plugin manifest

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
+# Development
+node_modules
+
+# Artifacts
+dist
+
+# System
+.DS_Store
+._
+
+# IDEs
+.vscode
+.idea
+*.iml
 # vscode
-.vscode 
+.vscode
 
 # Intellij
 *.iml
