--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
-	"name": "obsidian-sample-plugin",
+	"name": "obsidian-callout-manager",
 	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"description": "An Obsidian.md plugin that makes creating and configuring callouts easy.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"format": "prettier -w src"
 	},
 	"keywords": [],
-	"author": "",
+	"author": {
+		"name": "eth-p",
+		"url": "https://github.com/eth-p"
+	},
 	"license": "MIT",
+	"obsidianPlugin": {
+		"name": "Callouts",
+		"minAppVersion": "1.0.0",
+		"isDesktopOnly": false
+	},
 	"devDependencies": {
+		"@trivago/prettier-plugin-sort-imports": "^4.0.0",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
+		"esbuild-sass-plugin": "^2.4.5",
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
