--- a/.gitignore
+++ b/.gitignore
@@ -2,35 +2,14 @@
 node_modules
 
 # Artifacts
-dist
+/dist
+*.tsbuildinfo
 
 # System
 .DS_Store
-._
+._*
 
 # IDEs
 .vscode
 .idea
 *.iml
-# vscode
-.vscode
-
-# Intellij
-*.iml
-.idea
-
-# npm
-node_modules
-
-# Don't include the compiled main.js file in the repo.
-# They should be uploaded to GitHub releases instead.
-main.js
-
-# Exclude sourcemaps
-*.map
-
-# obsidian
-data.json
-
-# Exclude macOS Finder (System Explorer) View States
-.DS_Store
