--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
 	"name": "obsidian-callout-manager",
 	"version": "1.0.0",
 	"description": "An Obsidian.md plugin that makes creating and configuring callouts easy.",
-	"main": "main.js",
+	"type": "module",
+	"exports": {
+		"import": "./dist/api-esm.mjs",
+		"require": "./dist/api-cjs.js"
+	},
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production && rollup -c rollup.config.mjs",
 		"format": "prettier -w src"
 	},
 	"keywords": [],
@@ -15,11 +19,15 @@
 	},
 	"license": "MIT",
 	"obsidianPlugin": {
-		"name": "Callouts",
-		"minAppVersion": "1.0.0",
+		"name": "Callout Manager",
+		"minAppVersion": "0.1.0",
 		"isDesktopOnly": false
 	},
+	"peerDependencies": {
+		"obsidian": "latest"
+	},
 	"devDependencies": {
+		"@rollup/plugin-typescript": "^11.0.0",
 		"@trivago/prettier-plugin-sort-imports": "^4.0.0",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
@@ -27,7 +35,9 @@
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
 		"esbuild-sass-plugin": "^2.4.5",
-		"obsidian": "latest",
+		"rollup": "^3.14.0",
+		"rollup-plugin-dts": "^5.1.1",
+		"rollup-plugin-prettier": "^3.0.0",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
 	}
