--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
 	"compilerOptions": {
-		"baseUrl": ".",
 		"lib": ["DOM", "ES5", "ES6", "ES7"],
 		"inlineSourceMap": true,
 		"inlineSources": true,
@@ -12,7 +11,8 @@
 		"importHelpers": true,
 		"isolatedModules": true,
 		"strictNullChecks": true,
-		"strict": true
-	},
-	"include": ["src/*.ts"]
+		"strict": true,
+		"stripInternal": true,
+		"noEmit": true,
+	}
 }
