Proof-of-Concept Work (3/12)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+	"exclude": ["dist/**/*", "src/**/*.test.ts", "src/test-util.ts"],
 	"compilerOptions": {
 		"lib": ["DOM", "ES5", "ES6", "ES7"],
 		"inlineSourceMap": true,
