--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	},
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
+		"test": "jest",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production && rollup -c rollup.config.mjs",
 		"format": "prettier -w src"
 	},
@@ -27,18 +28,27 @@
 		"obsidian": "latest"
 	},
 	"devDependencies": {
+		"@babel/preset-env": "^7.20.2",
+		"@babel/preset-typescript": "^7.18.6",
 		"@rollup/plugin-typescript": "^11.0.0",
 		"@trivago/prettier-plugin-sort-imports": "^4.0.0",
+		"@types/color-convert": "^2.0.0",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
 		"esbuild-sass-plugin": "^2.4.5",
+		"jest": "^29.4.2",
+		"obsidian-extra": "^0.1.0",
+		"obsidian-undocumented": "^0.1.2",
 		"rollup": "^3.14.0",
 		"rollup-plugin-dts": "^5.1.1",
 		"rollup-plugin-prettier": "^3.0.0",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"color-convert": "^2.0.1"
 	}
 }
