--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
 	"exclude": ["dist/**/*", "src/**/*.test.ts", "src/test-util.ts"],
 	"compilerOptions": {
 		"lib": ["DOM", "ES5", "ES6", "ES7"],
+		"allowSyntheticDefaultImports": true,
+		"resolveJsonModule": true,
 		"inlineSourceMap": true,
 		"inlineSources": true,
 		"module": "ESNext",
