--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
     },
     "rules": {
       "no-unused-vars": "off",
+	  "no-mixed-spaces-and-tabs": "off",
       "@typescript-eslint/no-unused-vars": ["error", { "args": "none" }],
       "@typescript-eslint/ban-ts-comment": "off",
       "no-prototype-builtins": "off",
