--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,7 @@
     "rules": {
       "no-unused-vars": "off",
 	  "no-mixed-spaces-and-tabs": "off",
-      "@typescript-eslint/no-unused-vars": ["error", { "args": "none" }],
+      "@typescript-eslint/no-unused-vars": ["error", { "args": "none", "varsIgnorePattern": "STYLES" }],
       "@typescript-eslint/ban-ts-comment": "off",
       "no-prototype-builtins": "off",
       "@typescript-eslint/no-empty-function": "off",
