--- a/package.json
+++ b/package.json
@@ -38,14 +38,15 @@
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
-		"esbuild-sass-plugin": "^2.4.5",
 		"jest": "^29.4.2",
 		"obsidian-extra": "^0.1.0",
 		"obsidian-undocumented": "^0.1.2",
 		"rollup": "^3.14.0",
 		"rollup-plugin-dts": "^5.1.1",
 		"rollup-plugin-prettier": "^3.0.0",
-		"tslib": "2.4.0",
+		"sass": "^1.58.3",
+		"sorcery": "^0.11.0",
+		"source-map": "^0.7.4",
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
