--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"exclude": ["dist/**/*", "src/**/*.test.ts", "src/test-util.ts"],
 	"compilerOptions": {
-		"lib": ["DOM", "ES5", "ES6", "ES7"],
+		"lib": ["DOM", "ES5", "ES6", "ES7", "ES2017", "ES2018", "ES2019"],
 		"allowSyntheticDefaultImports": true,
 		"resolveJsonModule": true,
 		"inlineSourceMap": true,
@@ -16,6 +16,6 @@
 		"strictNullChecks": true,
 		"strict": true,
 		"stripInternal": true,
-		"noEmit": true,
+		"noEmit": true
 	}
 }
