--- a/.prettierrc
+++ b/.prettierrc
@@ -6,7 +6,7 @@
     "singleQuote": true,
     "semi": true,
 
-    "importOrder": ["^(?!obsidian|\\.{1,2}\/).+", "^obsidian", "^\\.\\./", "^\\./"],
+    "importOrder": ["^(?!obsidian|&|\\.{1,2}\/).+", "^obsidian", "^&", "^\\.\\./", "^\\./"],
     "importOrderSeparation": true,
     "importOrderSortSpecifiers": true
 }
