--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
+		"esbuild-plugin-alias": "^0.2.1",
 		"jest": "^29.4.2",
 		"obsidian-extra": "^0.1.0",
 		"obsidian-undocumented": "^0.1.2",
