--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
 		"minAppVersion": "0.1.0",
 		"isDesktopOnly": false
 	},
-	"peerDependencies": {
-		"obsidian": "latest"
+	"dependencies": {
+		"obsidian-extra": "^0.1.3"
 	},
 	"devDependencies": {
 		"@babel/preset-env": "^7.20.2",
@@ -39,7 +39,7 @@
 		"esbuild": "0.17.3",
 		"esbuild-plugin-alias": "^0.2.1",
 		"jest": "^29.4.2",
-		"obsidian-extra": "^0.1.0",
+		"obsidian": "latest",
 		"obsidian-undocumented": "^0.1.2",
 		"rollup": "^3.14.0",
 		"rollup-plugin-dts": "^5.1.1",
