--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
 		"paths": {
 			"obsidian-callout-manager": ["./api"],
 			"&callout": ["./api/callout"],
+			"&callout-util": ["./src/callout-util"],
 			"&callout-resolver": ["./src/callout-resolver"],
 			"&callout-settings": ["./src/callout-settings"],
 			"&plugin": ["./src/main"],
