--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	"devDependencies": {
 		"@babel/preset-env": "^7.20.2",
 		"@babel/preset-typescript": "^7.18.6",
+		"@coderspirit/nominal": "^3.2.2",
 		"@rollup/plugin-typescript": "^11.0.0",
 		"@trivago/prettier-plugin-sort-imports": "^4.0.0",
 		"@types/node": "^16.11.6",
