--- a/packages/sort/package.json
+++ b/packages/sort/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "@obsidian-callout-manager/search",
+	"name": "@obsidian-callout-manager/sort",
 	"private": true,
 	"version": "0.0.0",
-	"description": "Searching.",
+	"description": "Sorting.",
 	"type": "module",
 	"exports": {
 		".": "./src/index.ts"
