--- a/plugin/tsconfig.json
+++ b/plugin/tsconfig.json
@@ -1,4 +1,8 @@
 {
-	"extends": "@obsidian-callout-manager/build",
-	"include": ["src/*.ts"]
+	"extends": "@obsidian-callout-manager/build/tsconfig.json",
+	"include": ["src/**/*.ts"],
+	"compilerOptions": {
+		"paths": {
+		}
+	}
 }
